# gemvm

./: CMakeLists.txt  cgem.h  doc.txt  genlib.hpp  main.cpp  main.py  math.cpp  read.py  test.lua  test.out  test.py
src/: ctype_conversion.hpp  instructions.hpp  natives.cpp  object.cpp  object.hpp  stack_frame.hpp  vm.cpp  vm.hpp
std/: io.cpp
